# crustdata-mcp-demo

./: .gitignore  README.md  pyproject.toml  run_server.py
src/crustdata_mcp_demo/: client.py  constants.py  models.py  server.py
src/crustdata_mcp_demo/tools/: company.py  people.py  ping.py  web.py
