[project]
name = "crustdata_mcp_demo"
version = "0.1.0"
description = "MCP server demo for Crustdata API"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "pydantic>=2",
    "httpx",
]

[project.scripts]
crustdata_mcp_demo = "crustdata_mcp_demo.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
